fix: content overflow

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -15,6 +15,7 @@
 
 .about h2 {
   margin-top: 0;
+  padding: 0 20px;
   font-size: 30px;
   font-weight: 600;
   line-height: 1;
@@ -22,6 +23,10 @@
   @media (max-width: 1023px) {
     font-size: 24px;
     line-height: 41px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 0;
   }
 }
 
