--- a/source/sass/blocks/types.scss
+++ b/source/sass/blocks/types.scss
@@ -19,6 +19,7 @@
 .types h2 {
   margin-top: 0;
   margin-bottom: 51px;
+  padding: 0 20px;
   font-size: 30px;
   font-weight: 600;
   line-height: 1;
@@ -27,6 +28,10 @@
     margin-bottom: 30px;
     font-size: 24px;
     line-height: 41px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 0;
   }
 }
 
